Fix spacing in the share settings

--- a/client/src/app/user-module/user-list-page/list-share-settings/share-collaborators/share-collaborators.component.css
+++ b/client/src/app/user-module/user-list-page/list-share-settings/share-collaborators/share-collaborators.component.css
@@ -81,3 +81,11 @@ img.small-icon {
     width: 3em;
     height: 3em;
 }
+
+
+@media (max-width: 575.98px) {
+    img.small-icon {
+        width: 2.5em;
+        height: 2.5em;
+    }
+}
